<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResistorColorCode">

    <TextView
        android:id="@+id/txtResistorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/txtResistorTitle"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResistorInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/txtResistorInstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="358dp"
        android:layout_height="93dp"
        android:layout_marginTop="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/resistor" />

    <Button
        android:id="@+id/btnResiatorCalculate"
        android:layout_width="358dp"
        android:layout_height="42dp"
        android:layout_marginTop="360dp"
        android:text="@string/btnResistor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBand2"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="211dp"
        android:text="@string/txtBand2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/txtBand4"
        android:layout_width="154dp"
        android:layout_height="36dp"
        android:layout_marginTop="307dp"
        android:text="@string/txtBand4"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <Spinner
        android:id="@+id/txtSecondBand"
        android:layout_width="203dp"
        android:layout_height="38dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="211dp"
        android:entries="@array/txtBandColor"
        android:prompt="@string/txtBand2"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBand3"
        android:layout_width="154dp"
        android:layout_height="41dp"
        android:layout_marginTop="261dp"
        android:text="@string/txtBand3"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <Spinner
        android:id="@+id/txtFirstBand"
        android:layout_width="203dp"
        android:layout_height="38dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="164dp"
        android:entries="@array/txtBandColor"
        android:prompt="@string/txtBand1"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/txtThirdBand"
        android:layout_width="203dp"
        android:layout_height="38dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="261dp"
        android:contentDescription="@string/txtResistorDescription"
        android:entries="@array/txtMultiplier"
        android:prompt="@string/txtBand3"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/txtFourthBand"
        android:layout_width="206dp"
        android:layout_height="38dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="307dp"
        android:entries="@array/txtTolerance"
        android:prompt="@string/txtBand4"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBand1"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/txtBand1"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="356dp"
        android:layout_height="37dp"
        android:layout_marginTop="417dp"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>